# ComputacaoGrafica

./: .astylerc  .gitignore  README.md  Trabalho1CG
Trabalho1CG/: CMakeLists.txt  Trabalho1CG.kdev4  comandoCompilacao.txt  main.cpp  makefile  objectfile.cpp  objectfile.h  objeto.cpp  objeto.h  tipos.hpp  viewport.cpp  viewport.h  window.h
Trabalho1CG/.kdev4/: Trabalho1CG.kdev4
Trabalho1CG/glade/: window_main.glade  window_main.glade~
Trabalho1CG/src/: .kdev_include_paths  .main.cpp.kate-swp  .transformadas.cpp.kate-swp  .window.h.kate-swp  CMakeCache.txt  DrawingArea.cpp  DrawingArea.cpp.orig  DrawingArea.hpp  DrawingArea.hpp.orig  Elemento.hpp  IncludeObjectController.cpp  IncludeObjectController.cpp.orig  IncludeObjectController.hpp  IncludeObjectController.hpp.orig  IncludeObjectDialog.cpp  IncludeObjectDialog.cpp.orig  IncludeObjectDialog.hpp  ListaEnc.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowController.cpp  MainWindowController.cpp.orig  MainWindowController.hpp  Makefile  Makefile.orig  ModelColumns.cpp  Observer.hpp  Subject.cpp  Subject.hpp  Subject.hpp.orig  TransformationController.cpp  TransformationController.hpp  TransformationController.hpp.orig  TransformationDialog.cpp  TransformationDialog.hpp  TransformationDialog.hpp.orig  WeilerAtherton.cpp  WeilerAtherton.hpp  bezierclipper.cpp  bezierclipper.h  (+51 more)
Trabalho1CG/src/.kdev4/: _custom.kdev4  src.kdev4
Trabalho1CG/src/control/: IncludeObjectController.h  control.cpp  control.hpp
TutoriaisGtk/umBotao/: CMakeLists.txt  TestesVPL.kdev4  main.cpp
TutoriaisGtk/umBotao/.kdev4/: TestesVPL.kdev4
(+14 files in other folders)
